--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
           <version>3.0.0-M6</version>
           <configuration>
             <suiteXmlFiles>
-              <suiteXmlFile>testng.xml</suiteXmlFile>
+              <suiteXmlFile>testng_RegistrationTest.xml</suiteXmlFile>
             </suiteXmlFiles>
           </configuration>
         </plugin>
